samples/_failures_safe/1761607668_0b4794_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e73d394b.c: In function ‘main’:
./samples/SAFE/__tmp_e73d394b.c:134:5: error: expected declaration or statement at end of input
  134 |     printf("3: Transpose\n");
      |     ^~~~~~
